deploy/k8s/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apibeanz-deploy
  namespace: apibeanz
  labels:
    app: apibeanz
spec:
  replicas: 3
  selector:
    matchLabels:
      app: apibeanz
  template:
    metadata:
      labels:
        app: apibeanz
    spec:
      containers:
        - name: apibeanz-api
          image: rg.fr-par.scw.cloud/beanz/api:latest
          resources:
            limits:
              memory: 1024Mi
              cpu: '2'
            requests:
              memory: 512Mi
              cpu: '1'
